syntax = "proto3";
package proto;

message Block {
  bytes ParentHash = 1;
  bytes Hash = 2;
  uint64 height = 3;
  repeated string commands = 4;
  QuorumCert Justify = 5;
}

message QuorumCert {
  bytes BlockHash = 1;
  string type = 2;
  uint64 viewNum = 3;
  bytes signature = 4;
}